--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -1,9 +1,7 @@
 #=================================================
-# https://github.com/P3TERX/Actions-OpenWrt
 # Description: Build OpenWrt using GitHub Actions
 # Lisence: MIT
 # Author: P3TERX
-# Blog: https://p3terx.com
 #=================================================
 
 name: Build OpenWrt
@@ -26,14 +24,10 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: .config
+  CONFIG_FILE: rm2100.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
-  SSH_ACTIONS: false
-  UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
-  UPLOAD_COWTRANSFER: false
-  UPLOAD_WETRANSFER: false
   TZ: Asia/Shanghai
 
 jobs:
@@ -68,26 +62,6 @@ jobs:
         cd openwrt
         ../$DIY_P1_SH
 
-    - name: Install Extra Packages
-      run: |
-        cd openwrt/package
-        git clone https://github.com/rufengsuixing/luci-app-adguardhome
-        
-        git clone https://github.com/fw876/helloworld
-        mv helloworld/luci-app-ssr-plus/ .
-        rm -rf helloworld/
-        
-        rm -rf lean/luci-theme-argon
-        git clone -b 18.06 https://github.com/jerrykuku/luci-theme-argon.git
-        
-        git clone https://github.com/vernesong/OpenClash
-        mv OpenClash/luci-app-openclash/ .
-        rm -rf OpenClash/
-        cd base-files/files
-        mkdir -p etc/openclash/core && cd etc/openclash/core
-        curl -L https://github.com/vernesong/OpenClash/releases/download/Clash/clash-linux-mipsle-softfloat.tar.gz | tar zxf -
-        chmod +x clash
-
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
 
@@ -101,10 +75,6 @@ jobs:
         chmod +x $DIY_P2_SH
         cd openwrt
         ../$DIY_P2_SH
-
-    - name: SSH connection to Actions
-      uses: P3TERX/debugger-action@master
-      if: env.SSH_ACTIONS == 'true' || contains(github.event.action, 'ssh')
 
     - name: Download package
       id: package
@@ -148,5 +118,3 @@ jobs:
       with:
         name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: ${{ env.FIRMWARE }}
-
- 
